--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
+    "motion": "^11.11.17",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
